--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           Depending on factors such as your goals and learning style, this quiz can help point you in the right direction. <br>
           I do want to stress, however, that ultimately the right programming langauge <strong>is the one you stick with.</strong> <br>
       </h3>
-      <p>Ready. Set. Code!</p>
+      <h3>Ready. Set. Code!</h3>
       <form id="form-group"> 
         <div class="radio">
           <p>Question1</p>
@@ -68,143 +68,221 @@
         </div>
         <div class="radio">
           <p>Question3</p>
-          <input type="radio" name="question3" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question3" value="1">
+            choice1
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question3" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question3" value="2">
+            choice2
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question3" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question3" value="3">
+            choice3
+        </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question3" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question3" value="4">
+            choice4
+          </label>
         </div>
         <div class="radio">
           <p>Question 4</p>
-          <input type="radio" name="question4" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question4" value="1">
+            choice1
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question4" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question4" value="2">
+            choice2
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question4" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question4" value="3">
+            choice3
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question4" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question4" value="4">
+            choice4
+          </label>
         </div>
         <div class="radio">
           <p>Question 5</p>
-          <input type="radio" name="question5" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question5" value="1">
+            choice1
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question5" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question5" value="2">
+            choice2
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question5" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question5" value="3">
+            choice3
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question5" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question5" value="4">
+            choice4
+          </label>
         </div>
         <div class="radio">
           <p>Question 6</p>
-          <input type="radio" name="question6" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question6" value="1">
+            choice1
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question6" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question6" value="2">
+            choice2
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question6" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question6" value="3">
+            choice3
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question6" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question6" value="4">
+            choice4
+          </label>
         </div>
         <div class="radio">
           <p>Question 7</p>
-          <input type="radio" name="question7" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question7" value="1">
+            choice1
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question7" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question7" value="2">
+            choice2
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question7" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question7" value="3">
+            choice3
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question7" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question7" value="4">
+            choice4
+          </label>
         </div>
         <div class="radio">
           <p>Question 8</p>
-          <input type="radio" name="question8" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question8" value="1">
+            choice1
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question8" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question8" value="2">
+            choice2
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question8" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question8" value="3">
+            choice3
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question8" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question8" value="4">
+            choice4
+          </label>
         </div>
         <div class="radio">
           <p>Question 9</p>
-          <input type="radio" name="question9" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question9" value="1">
+            choice1
+        </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question9" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question9" value="2">
+            choice2
+        </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question9" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question9" value="3">
+            choice3
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question9" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question9" value="4">
+            choice4
+          </label>
         </div>
         <div class="radio">
           <p>Question10</p>
-          <input type="radio" name="question10" value="1">
-          choice1
+          <label>
+            <input type="radio" name="question10" value="1">
+            choice1
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question10" value="2">
-          choice2
+          <label>
+            <input type="radio" name="question10" value="2">
+            choice2
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question10" value="3">
-          choice3
+          <label>
+            <input type="radio" name="question10" value="3">
+            choice3
+          </label>
         </div>
         <div class="radio">
-          <input type="radio" name="question10" value="4">
-          choice4
+          <label>
+            <input type="radio" name="question10" value="4">
+            choice4
+          </label>
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
+      <div id="Ruby">
+        <h3>You should learn Ruby!</h3>
+      </div>
+      <div id="C-sharp">
+        <h3>You should learn C#!</h3>
+      </div>
+      <div id="JavaScript">
+        <h3>You should learn JavaScript!</h3>
+      </div>
+      <div id="Python">
+        <h3>You should learn Python!</h3>
+      </div>
+      <div id="Swift">
+        <h3>You should learn Swift!</h3>
+      </div>
     </div>
   </body>
-
 </html>
