add questions and choices

--- a/index.html
+++ b/index.html
@@ -17,268 +17,265 @@
       <h3>Ready. Set. Code!</h3>
       <form id="form-group"> 
         <div class="radio">
-          <p>Question1</p>
+          <p>What job title sounds most appealing to you?</p>
           <label>
             <input type="radio" name="question1" value="1">
-            choice1
+            Software Engineer
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question1" value="2">
-            choice2
+            Web Developer
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question1" value="3">
-            choice3
+            ios Developer
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question1" value="4">
-            choice4
+            Game Developer
           </label>
         </div>
         <div class="radio"> 
-          <p>Question2</p>
+          <p>What do you want most in your language of choice?</p>
           <label>
             <input type="radio" name="question2" value="1">
-            choice1
+            Easiest to learn
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question2" value="2">
-            choice2
+            Flexible across different platforms
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question2" value="3">
-            choice3
+            Most in demand
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question2" value="4">
-            choice4
+            Whichever pays the most
           </label>
         </div>
         <div class="radio">
-          <p>Question3</p>
+          <p>What is your favorite color?</p>
           <label>
             <input type="radio" name="question3" value="1">
-            choice1
+            Purple
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question3" value="2">
-            choice2
+            Red
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question3" value="3">
-            choice3
+            Yellow
         </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question3" value="4">
-            choice4
+            Pink
           </label>
         </div>
         <div class="radio">
-          <p>Question 4</p>
+          <p>Do you already know a programming language?</p>
           <label>
             <input type="radio" name="question4" value="1">
-            choice1
+            No
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question4" value="2">
-            choice2
+            One
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question4" value="3">
-            choice3
+            A few
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question4" value="4">
-            choice4
+            More than three
           </label>
         </div>
         <div class="radio">
-          <p>Question 5</p>
+          <p>Do you enjoy group work?</p>
           <label>
             <input type="radio" name="question5" value="1">
-            choice1
+            Not really, but I will tolerate it if necessary.
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question5" value="2">
-            choice2
+            Yes--I enjoy bouncing off ideas and human interaction. 
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question5" value="3">
-            choice3
+            Aba lance of group work and solo work
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question5" value="4">
-            choice4
+            I hate working in groups--people are annoying!
           </label>
         </div>
         <div class="radio">
-          <p>Question 6</p>
+          <p>How are you with numbers?</p>
           <label>
             <input type="radio" name="question6" value="1">
-            choice1
+            OK.
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question6" value="2">
-            choice2
+            Bad.
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question6" value="3">
-            choice3
+            Amazing.
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question6" value="4">
-            choice4
+            Good.
           </label>
         </div>
         <div class="radio">
-          <p>Question 7</p>
+          <p>Do you play video games?</p>
           <label>
             <input type="radio" name="question7" value="1">
-            choice1
+            Occasionally
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question7" value="2">
-            choice2
+            Not my thing
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question7" value="3">
-            choice3
+            Yes! I am even up to date with all the latest games and their new features. 
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question7" value="4">
-            choice4
+            Not games, but I download many fun apps on my phone.
           </label>
         </div>
         <div class="radio">
-          <p>Question 8</p>
+          <p>How do you stay organized?</p>
           <label>
             <input type="radio" name="question8" value="1">
-            choice1
+            Google calendar
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question8" value="2">
-            choice2
+            Organized? I am all over the place.
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question8" value="3">
-            choice3
+            I write things down, but remember everything I need to do without it anyway. 
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question8" value="4">
-            choice4
+            Use my reminders app on my phone
           </label>
         </div>
         <div class="radio">
-          <p>Question 9</p>
+          <p>Do you enjoy work?</p>
           <label>
             <input type="radio" name="question9" value="1">
-            choice1
+            I am a workaholic.
         </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question9" value="2">
-            choice2
+            I prefer my free time.
         </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question9" value="3">
-            choice3
+            As long as I enjoy what I do.
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question9" value="4">
-            choice4
+            Depends on my mood.
           </label>
         </div>
         <div class="radio">
-          <p>Question10</p>
+          <p>What is your ideal work environment?</p>
           <label>
             <input type="radio" name="question10" value="1">
-            choice1
+            Home office
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question10" value="2">
-            choice2
+            The beach
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question10" value="3">
-            choice3
+            Cubicle farm
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question10" value="4">
-            choice4
+            Starbucks
           </label>
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
-      <div id="Ruby">
-        <h3>You should learn Ruby!</h3>
-      </div>
-      <div id="C-sharp">
-        <h3>You should learn C#!</h3>
-      </div>
       <div id="JavaScript">
         <h3>You should learn JavaScript!</h3>
       </div>
       <div id="Python">
         <h3>You should learn Python!</h3>
+      </div>
+      <div id="C-sharp">
+        <h3>You should learn C#!</h3>
       </div>
       <div id="Swift">
         <h3>You should learn Swift!</h3>
