--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         <div class="radio">
           <label>
             <input type="radio" name="question5" value="3">
-            Aba lance of group work and solo work
+            A balance of group work and solo work
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="question5" value="4">
-            I hate working in groups--people are annoying!
+            I hate working in groups--people are so annoying!
           </label>
         </div>
         <div class="radio">
@@ -268,11 +268,11 @@
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
-      <div id="JavaScript">
-        <h3>You should learn JavaScript!</h3>
-      </div>
       <div id="Python">
         <h3>You should learn Python!</h3>
+      </div>
+      <div id="JavaScript">
+        <h3>You should learn JavaScript!</h3>
       </div>
       <div id="C-sharp">
         <h3>You should learn C#!</h3>
