--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="js/jquery-3.5.1.js" rel="stylesheet" type="text/css">
-    <link href="js/scripts.js" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Programming Language Quiz</title>
   </head>
   <body>
@@ -268,6 +268,7 @@
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
+
       <div id="Python">
         <h3>You should learn Python!</h3>
       </div>
