correct spelling mistake from C-sharp to C-Sharp

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <div id="JavaScript">
         <h3>You should learn JavaScript!</h3>
       </div>
-      <div id="C-sharp">
+      <div id="C-Sharp">
         <h3>You should learn C#!</h3>
       </div>
       <div id="Swift">
