center into-image and header

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="container">
       <h1>Which programming langauge should you study?</h1>
-      <img src="#" alt="#">
-      <h3>Deciding what programming language to study may feel like a major decision. <br>
+      <img src="img/intro-image.png" alt="Programming languages" id="intro-image">
+      <p class="intro">Deciding what programming language to study may feel like a major decision. <br>
           Depending on factors such as your goals and learning style, this quiz can help point you in the right direction. <br>
-          I do want to stress, however, that ultimately the right programming langauge <strong>is the one you stick with.</strong> <br>
-      </h3>
-      <h3>Ready. Set. Code!</h3>
+          I do want to stress, however, that ultimately the right programming langauge <span><strong>is the one you stick with.</strong></span> <br>
+      </p>
+      <p class="ready">Ready. Set. Code!</p>
       <form id="form-group"> 
         <div class="radio">
           <p>What job title sounds most appealing to you?</p>
@@ -41,6 +41,7 @@
             Game Developer
           </label>
         </div>
+        <br>
         <div class="radio"> 
           <p>What do you want most in your language of choice?</p>
           <label>
@@ -66,6 +67,7 @@
             Whichever pays the most
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>What is your favorite color?</p>
           <label>
@@ -91,6 +93,7 @@
             Pink
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>Do you already know a programming language?</p>
           <label>
@@ -116,6 +119,7 @@
             More than three
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>Do you enjoy group work?</p>
           <label>
@@ -141,6 +145,7 @@
             I hate working in groups--people are so annoying!
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>How are you with numbers?</p>
           <label>
@@ -166,6 +171,7 @@
             Good.
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>Do you play video games?</p>
           <label>
@@ -191,6 +197,7 @@
             Not games, but I download many fun apps on my phone.
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>How do you stay organized?</p>
           <label>
@@ -216,6 +223,7 @@
             Use my reminders app on my phone
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>Do you enjoy work?</p>
           <label>
@@ -241,6 +249,7 @@
             Depends on my mood.
           </label>
         </div>
+        <br>
         <div class="radio">
           <p>What is your ideal work environment?</p>
           <label>
