change background color of body, header, and form

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <div class="container">
+      <header>
       <h1>Which programming langauge should you study?</h1>
-      <img src="img/intro-image.png" alt="Programming languages" id="intro-image">
-      <p class="intro">Deciding what programming language to study may feel like a major decision. <br>
-          Depending on factors such as your goals and learning style, this quiz can help point you in the right direction. <br>
-          I do want to stress, however, that ultimately the right programming langauge <span><strong>is the one you stick with.</strong></span> <br>
-      </p>
-      <p class="ready">Ready. Set. Code!</p>
+        <img src="img/intro-image.png" alt="Programming languages" id="intro-image">
+        <p class="intro">Deciding what programming language to study may feel like a major decision. 
+            Depending on factors such as your goals and learning style, this quiz can help point you in the right direction. 
+            I do want to stress, however, that ultimately <br> the right programming language <span><strong>is the one you stick with.</strong></span> <br>
+        </p>
+        <p class="ready">Ready. Set. Code!</p>
+      </header>
       <form id="form-group"> 
         <div class="radio">
-          <p>What job title sounds most appealing to you?</p>
+          <p>Q1: What job title sounds most appealing to you?</p>
           <label>
             <input type="radio" name="question1" value="1">
             Software Engineer
@@ -43,7 +45,7 @@
         </div>
         <br>
         <div class="radio"> 
-          <p>What do you want most in your language of choice?</p>
+          <p>Q2: What do you want most in your language of choice?</p>
           <label>
             <input type="radio" name="question2" value="1">
             Easiest to learn
@@ -69,7 +71,7 @@
         </div>
         <br>
         <div class="radio">
-          <p>What is your favorite color?</p>
+          <p>Q3: What is your favorite color?</p>
           <label>
             <input type="radio" name="question3" value="1">
             Purple
@@ -90,12 +92,12 @@
         <div class="radio">
           <label>
             <input type="radio" name="question3" value="4">
-            Pink
+            Green
           </label>
         </div>
         <br>
         <div class="radio">
-          <p>Do you already know a programming language?</p>
+          <p>Q4: Do you already know a programming language?</p>
           <label>
             <input type="radio" name="question4" value="1">
             No
@@ -121,7 +123,7 @@
         </div>
         <br>
         <div class="radio">
-          <p>Do you enjoy group work?</p>
+          <p>Q5: Do you enjoy group work?</p>
           <label>
             <input type="radio" name="question5" value="1">
             Not really, but I will tolerate it if necessary.
@@ -147,7 +149,7 @@
         </div>
         <br>
         <div class="radio">
-          <p>How are you with numbers?</p>
+          <p>Q6: How are you with numbers?</p>
           <label>
             <input type="radio" name="question6" value="1">
             OK.
@@ -173,7 +175,7 @@
         </div>
         <br>
         <div class="radio">
-          <p>Do you play video games?</p>
+          <p>Q7: Do you play video games?</p>
           <label>
             <input type="radio" name="question7" value="1">
             Occasionally
@@ -199,7 +201,7 @@
         </div>
         <br>
         <div class="radio">
-          <p>How do you stay organized?</p>
+          <p>Q8: How do you stay organized?</p>
           <label>
             <input type="radio" name="question8" value="1">
             Google calendar
@@ -225,7 +227,7 @@
         </div>
         <br>
         <div class="radio">
-          <p>Do you enjoy work?</p>
+          <p>Q9: Do you enjoy work?</p>
           <label>
             <input type="radio" name="question9" value="1">
             I am a workaholic.
@@ -251,7 +253,7 @@
         </div>
         <br>
         <div class="radio">
-          <p>What is your ideal work environment?</p>
+          <p>Q10: What is your ideal work environment?</p>
           <label>
             <input type="radio" name="question10" value="1">
             Home office
