--- a/index.html
+++ b/index.html
@@ -282,15 +282,29 @@
 
       <div id="Python">
         <h3>You should learn Python!</h3>
+        <p>Python is in high demand and easy to learn.</p>
+        <p>Widely used in databases and security features, many companies need these skills to functin.</p>
+        <p>Happy coding!</p>
       </div>
       <div id="JavaScript">
         <h3>You should learn JavaScript!</h3>
+        <p>JavaScript is popular langaugeused for front and backend web development.</p>
+        <p>It tends to lead to jobs in Web Development where you may find opportunities
+          with a flexible work schedule, especially if you opt for freelance work.
+        </p>
+        <p>Happy coding!</p>
       </div>
       <div id="C-Sharp">
         <h3>You should learn C#!</h3>
+        <p>While not the easiest language to learn, C# is widely used with Windows operating systems.</p>
+        <p>If you have good math skills and do not mind long hours, this is a good fit.</p>
+        <p>Happy coding!</p>
       </div>
       <div id="Swift">
         <h3>You should learn Swift!</h3>
+        <p>Swift is used for app development and is becoming more popular as we move towards mobile devices.</p>
+        <p>It is very valuable to learn a langauge that will be our future so this is a major plus.</p>
+        <p>Happy coding!</p>
       </div>
     </div>
   </body>
